[package]
name = "asset-scanner"
version = "0.1.0"
authors = ["Jacob Trueb <jtrueb@northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.5.4", features = ["serde"] }
env_logger = "0.8.1"
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4.11"
rand = "0.7.3"
serde = "1.0.116"
serde_json = "1.0.57"
uuid = { version = "0.8.1", features = ["serde", "v4"] }